tests/compile_fail/borrow/struct_attr_empty.rs
#[derive(derive_more::Borrow)]
#[borrow(forward)]
struct Foo;

fn main() {}
