tests/compile_fail/borrow/struct_attr_empty.stderr
error: `Borrow` can only be derived for structs with exactly one field
 --> tests/compile_fail/borrow/struct_attr_empty.rs:3:1
  |
3 | struct Foo;
  | ^^^^^^
